Shrunk the navbar.

--- a/McsaMeetsMailer/Pages/Shared/_Layout.cshtml
+++ b/McsaMeetsMailer/Pages/Shared/_Layout.cshtml
@@ -20,20 +20,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a asp-page="/Index" class="navbar-brand">MCSA-KZN Meets Mailer</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li>
-          <a asp-page="/Index">Home</a>
-        </li>
-      </ul>
+      <span style="color: white;">MCSA-KZN Meets Mailer</span>
     </div>
   </div>
 </nav>
