--- a/McsaMeetsMailer/wwwroot/css/site.css
+++ b/McsaMeetsMailer/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-  padding-top: 50px;
+  padding-top: 10px;
   padding-bottom: 20px;
 }
 
@@ -13,4 +13,10 @@ body {
 
 .iframe-resizable {
   resize: both;
+}
+
+.navbar {
+  min-height: 20px;
+  max-height: 20px;
+  height: 20px;
 }
