--- a/McsaMeetsMailer/Pages/Meets.cshtml
+++ b/McsaMeetsMailer/Pages/Meets.cshtml
@@ -5,7 +5,7 @@
   Layout = null;
 }
 
-<div style="width: 80%; text-align: center;">
+<div style="text-align: center;">
   <img src="@Url.Content("images/header.jpg")" class="img-responsive" style="max-height: 200px;" />
   
   <div style="display: inline-block;">
