--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -8,41 +8,44 @@
   <br>
 
   <table style="border-collapse: collapse; border-spacing: 0; border: 1px solid #F0F0F0; width: 100%;">
-      <tr>
-          <!--HeaderHeading-->
-          <th style="background: #A8B4CC; color: black; border: 2px solid white; padding: 10px;">
-              {Heading}
-          </th>
-      </tr>
-      <!--HeaderValues-->
-      <tr>
-          <!--HeaderValue-->
-          <td style="border: 2px solid white; padding: 10px; background-color: #F3F3F3;">
-              {Value}
-          </td>
+    <tr>
+      <!--HeaderHeading-->
+      <th style="background: #A8B4CC; color: black; border: 2px solid white; padding: 10px;">
+        {Heading}
+      </th>
+    </tr>
+    <!--HeaderValues-->
+    <tr>
+      <!--HeaderValue-->
+      <td style="border: 2px solid white; padding: 10px; background-color: #F3F3F3;">
+        {Value}
+      </td>
 
-          <!--HeaderLinkValue-->
-          <td style="border: 2px solid white; padding: 10px; background-color: #F3F3F3;">
-              <a href="#{Value}" style="text-decoration: none;">
-                  <span>{Value}</span>
-              </a>
-          </td>
-      </tr>
-      <!--HeaderValues_Invalid-->
-      <tr style="color: white; background-color: red;">
-          <!--HeaderValue-->
-          <td style="background-color: red; border: 2px solid white; padding: 10px;">
-              {Value}
-          </td>
+      <!--HeaderLinkValue-->
+      <td style="border: 2px solid white; padding: 10px; background-color: #F3F3F3;">
+        <a href="#{Value}" style="text-decoration: none;">
+          <span>{Value}</span>
+        </a>
+      </td>
+    </tr>
+    <!--HeaderValues_Invalid-->
+    <tr style="color: white; background-color: red;">
+      <!--HeaderValue-->
+      <td style="background-color: red; border: 2px solid white; padding: 10px;">
+        {Value}
+      </td>
 
-          <!--HeaderLinkValue-->
-          <td style="background-color: red; border: 2px solid white; padding: 10px;">
-              <a href="#{Value}"  style="text-decoration: none; color: white;">
-                  <span>{Value}</span>
-              </a>
-          </td>
-      </tr>
+      <!--HeaderLinkValue-->
+      <td style="background-color: red; border: 2px solid white; padding: 10px;">
+        <a href="#{Value}"  style="text-decoration: none; color: white;">
+          <span>{Value}</span>
+        </a>
+      </td>
+    </tr>
   </table>
+  
+  <p>Meet Grades range from 1 (easy walk) to 5 (serious Berg pass), 'R' indicates rock-climbing.</p>
+  <p>For example, 3R could describe a meet involving a moderate hike and rock-climbing (which may be an optional activity).</p>
 
   <br>
   <h3>Meet Details</h3>
