Grade description tweaks.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -44,8 +44,10 @@
     </tr>
   </table>
   
-  <p>Meet Grades range from 1 (easy walk) to 5 (serious Berg pass), 'R' indicates rock-climbing.</p>
-  <p>For example, 3R could describe a meet involving a moderate hike and rock-climbing (which may be an optional activity).</p>
+  <div style="font-size: small;">
+    <p>Meet Grades range from <b>1</b> (easy walk) to <b>5</b> (serious 'Berg pass), <b>R</b> indicates rock-climbing.</p>
+    <p>For example, 3R could describe a meet involving a moderate hike and rock-climbing (which may be an optional activity).</p>
+  </div>
 
   <br>
   <h3>Meet Details</h3>
