Header & footer images added for email.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -6,6 +6,8 @@
   <p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;">View the schedule online <a href="{OnlineScheduleUrl}">here</a>.</p>
 
   <br>
+  
+  <p><img src="https://mcsa-kzn-meets.azurewebsites.net/images/header.jpg" class="img-responsive" style="max-height: 200px;" /></p>
 
   <table style="border-collapse: collapse; border-spacing: 0; border: 1px solid #F0F0F0; width: 100%;">
     <tr>
@@ -96,4 +98,7 @@
       </tr>
     </table>
   </a>
+
+  <p><img src="https://mcsa-kzn-meets.azurewebsites.net/images/footer.jpg" class="img-responsive" style="max-height: 200px;" /></p>
+
 </body>
