--- a/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
+++ b/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
@@ -11,13 +11,11 @@
     "Please do not reply to this email as the address is not monitored.\n\n" +
     "Yours in adventure,\n" +
     "The Mountain Club of South Africa, KwaZulu-Natal Section.";
-
-  var monthName = $"{DateTime.Now:MMMM}";
 }
 
 <div class="container" style="padding-top: 20px;">
   <label class="label label-default">Email Subject</label>
-  <input id="emailSubject" type="text" class="form-control input-sm" maxlength="64" value="MCSA-KZN Meet Sheet : @monthName" />
+  <input id="emailSubject" type="text" class="form-control input-sm" maxlength="64" value="MCSA-KZN Meet Sheet" />
   <label class="label label-default">Email Body</label>
   <textarea id="emailBody" class="form-control input-sm" rows="3" maxlength="512">@Html.Raw(defaultBody)</textarea>
 </div>
