Fixed detail tables differing widths issue.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -58,7 +58,7 @@
 
     <!--Details-->
     <a id="{Anchor}" style="text-decoration: none; color: black;">
-      <table style="border-collapse: collapse; border-spacing: 0; border: 1px solid #F0F0F0; margin: 0px auto; width: auto;">
+      <table style="border-collapse: collapse; border-spacing: 0; border: 1px solid #F0F0F0; margin: 0px auto; width: 80%;">
         <!--DetailHeader-->
         <tr style="">
           <td style="border: 2px solid white; padding: 10px; width: 20%; background-color: #365583;">
@@ -99,7 +99,7 @@
         </tr>
       </table>
     </a>
-    
+
     <div style="font-size: small; text-align: left; margin: 0px auto; width: 70%; padding-top: 20px;">
       <p><b>GRADES</b> - Where a Berg or other climbing meet has been allocated a grade 1, 2 or 3 as well as the usual R, this means that non-climbers are most welcome as hikers on the meet.</p>
 
@@ -121,7 +121,7 @@
 
       <p><b>CLIMBING ON TUESDAYS</b> - Contact Bruce Sobey, 0834406753.</p>
 
-      <p><b>DISCLAIMER</b> - Hiking and climbing in mountainous areas are potentially hazardous activities. Participation in MCSA meets is at your own risk. It is your own responsibility to be properly equipped with adequate food, clothing, footwear, sleeping bag, shelter and maps. The club and the meet leaders cannot be held liable for any injuries or mishaps whatsoever. An Indemnity Form is available for leaders use.</p>
+      <p><b><span style="color: red;">DISCLAIMER</span></b> - Hiking and climbing in mountainous areas are potentially hazardous activities. Participation in MCSA meets is at your own risk. It is your own responsibility to be properly equipped with adequate food, clothing, footwear, sleeping bag, shelter and maps. The club and the meet leaders cannot be held liable for any injuries or mishaps whatsoever. An Indemnity Form is available for leaders use.</p>
     </div>
   </div>
 
