--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -55,25 +55,25 @@
     </div>
 
     <h3 style="text-align: center; padding-top: 10px;">Meet Details</h3>
-
+    
     <!--Details-->
     <a id="{Anchor}" style="text-decoration: none; color: black;">
-      <table style="border-collapse: collapse; border-spacing: 0; border: 1px solid #F0F0F0; margin: 0px auto; width: 80%;">
+      <table style="table-layout: fixed; border-collapse: collapse; border-spacing: 0; border: 1px solid #F0F0F0; margin: 0px auto; width: 100%;">
         <!--DetailHeader-->
         <tr style="">
-          <td style="border: 2px solid white; padding: 10px; width: 20%; background-color: #365583;">
+          <td style="border: 2px solid white; padding: 10px; width: 30%; background-color: #365583;">
           </td>
 
-          <td style="border: 2px solid white; padding: 10px; width: 80%; background-color: #A8B4CC;">
+          <td style="border: 2px solid white; padding: 10px; width: 70%; background-color: #A8B4CC;">
             <b>{Value}</b>
           </td>
         </tr>
         <!--DetailHeader_Invalid-->
         <tr style="background-color: lightgray">
-          <td style="border: 2px solid white; padding: 10px; width: 20%;">
+          <td style="border: 2px solid white; padding: 10px; width: 30%;">
           </td>
 
-          <td style="border: 2px solid white; padding: 10px; width: 80%;">
+          <td style="border: 2px solid white; padding: 10px; width: 70%;">
             <b>{Value}</b>
           </td>
         </tr>
@@ -99,7 +99,7 @@
         </tr>
       </table>
     </a>
-
+    
     <div style="font-size: small; text-align: left; margin: 0px auto; width: 70%; padding-top: 20px;">
       <p><b>GRADES</b> - Where a Berg or other climbing meet has been allocated a grade 1, 2 or 3 as well as the usual R, this means that non-climbers are most welcome as hikers on the meet.</p>
 
@@ -113,13 +113,13 @@
 			  
       <p><b>DMG</b> - A monthly meet of trad climbers with partners pushing their grades & then slaking their thirst, but other climbers are welcome to come along to the venue for the camaraderie.</p>
 			  
-      <p><b>UPDATES</b> - Check the newsletter and website for changes and for details of new meets. The latest Meet Sheet can be viewed on the club's website at http://kzn.mcsa.org.za/meets</p>
+      <p><b>UPDATES</b> - Check the newsletter and website for changes and for details of new meets. The latest Meet Sheet can be viewed on the club's website at https://mcsa-kzn-meets.azurewebsites.net/Meets or http://kzn.mcsa.org.za/meets</p>
 			  
       <p><b>CAMBALALA HUT</b> - Booking calendar on-line (http://kzn.mcsa.org.za/Resources/cambalala-hut) or Clem Robins at clemnolarobins@gmail.com</p>
 
       <p><b>GUIDE TO MEET LEADERS</b> - Meet Leaders please note the Guide to Meet Leaders and Indemnity Form on the MCSA KZN website.</p>
 
-      <p><b>CLIMBING ON TUESDAYS</b> - Contact Bruce Sobey, 0834406753.</p>
+      <p><b>CLIMBING ON TUESDAYS</b> - Contact Bruce Sobey, 083 440 6753.</p>
 
       <p><b><span style="color: red;">DISCLAIMER</span></b> - Hiking and climbing in mountainous areas are potentially hazardous activities. Participation in MCSA meets is at your own risk. It is your own responsibility to be properly equipped with adequate food, clothing, footwear, sleeping bag, shelter and maps. The club and the meet leaders cannot be held liable for any injuries or mishaps whatsoever. An Indemnity Form is available for leaders use.</p>
     </div>
