--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -105,7 +105,7 @@
 
       <p><b>BACK-UP MEET LEADERS</b> - When unable to take their meet, the meet leader should have contact details of a backup leader.</p>
 
-      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be distributed by email, on the website and in the newsletter if time permits. Be sure that you are on the Google-mail list for MCSA members to receive notice of the many short notice meets. Scott Sinclair (scott.sinclair.za@gmail.com) controls the list or kzn.mcsa.comm@gmail.com</p>
+      <p><b>IMPROMPTU MEETS</b> - May be arranged at short notice and the details will be distributed by email, on the website and in the newsletter if time permits. Be sure that you are on the Google-mail list for MCSA members to receive notice of the many short notice meets (contact kzn.mcsa.comm@gmail.com).</p>
 			  
       <p><b>ADDITIONAL MEETS</b> - Please advise Clem Robins of your plans for a meet which you are prepared to arrange/lead and it will be added to this or the appropriate future Meet Sheet.</p>
 			  
