Added link in email to printer friendly page.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -3,7 +3,9 @@
 
   <br>
 
-  <p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;">View the schedule online <a href="{OnlineScheduleUrl}">here</a>.</p>
+  <p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;">View the schedule <b>online</b> <a href="{OnlineScheduleUrl}">here</a>.</p>
+
+  <p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;"><b>Printer friendly</b> version <a href="{OnlineScheduleUrl}?printerFriendly">here</a>.</p>
 
   <br>
   
