Fixed anchor linking.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -30,7 +30,7 @@
 
         <!--HeaderLinkValue-->
         <td style="border: 2px solid white; padding: 10px; background-color: #F3F3F3;">
-          <a href="#{Value}" style="text-decoration: none;">
+          <a href="#{Anchor}" style="text-decoration: none;">
             <span>{Value}</span>
           </a>
         </td>
