Provide query param to allow hiding header/footer images.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -9,7 +9,7 @@
 
   <br>
   
-  <div style="padding-top: 10px; padding-bottom: 20px; display: flex;">
+  <div style="padding-top: 10px; padding-bottom: 20px; display: {HeaderAndFooterImageVisibility};">
     <img src="https://mcsa-kzn-meets.azurewebsites.net/images/header.jpg" style="max-height: 150px; margin: auto;" />
   </div>
 
@@ -127,7 +127,7 @@
     </div>
   </div>
 
-  <div style="padding-top: 10px; padding-bottom: 20px; display: flex;">
+  <div style="padding-top: 10px; padding-bottom: 20px; display: {HeaderAndFooterImageVisibility};">
     <img src="https://mcsa-kzn-meets.azurewebsites.net/images/footer.jpg" style="max-height: 150px; margin: auto;" />
   </div>
 </body>
