Hide line-breaks when not needed.

--- a/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
+++ b/McsaMeetsMailer/wwwroot/templates/FullScheduleEmailTemplate.html
@@ -1,13 +1,13 @@
 ﻿<body style="font-family: calibri;">
   <p style="display: {CustomMessageDisplayStyle};">{CustomMessage}</p>
 
-  <br>
+  <br style="display: {CustomMessageDisplayStyle};">
 
   <p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;">View the schedule online <a href="{OnlineScheduleUrl}">here</a>.</p>
 
   <p style="display: {OnlineScheduleDisplayStyle}; font-weight: bold;">Printer friendly version <a href="{OnlineScheduleUrl}?printerFriendly">here</a>.</p>
 
-  <br>
+  <br style="display: {OnlineScheduleDisplayStyle};">
   
   <div style="padding-top: 10px; padding-bottom: 20px; display: {HeaderAndFooterImageVisibility};">
     <img src="https://mcsa-kzn-meets.azurewebsites.net/images/header.jpg" style="max-height: 150px; margin: auto;" />
