Add page for sending abridged meet sheets.

--- a/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
+++ b/McsaMeetsMailer/Pages/MeetSheetEmailPreview.cshtml
@@ -4,6 +4,7 @@
   ViewData["Title"] = "Email Preview";
 
   // TODO: Pull this from config.
+  // NOTE: This is duplicated in SendEmail.cshtml
   const string defaultBody =
     "Hi\n\n" +
     "Please find the latest MCSA-KZN Meet Sheet below.\n\n" +
